Added some basic classes to see where we might go

--- a/Project1/Makefile
+++ b/Project1/Makefile
@@ -1,3 +1,17 @@
 CC=g++
-CFLAGS=
-LFLAGS=
+CFLAGS=-O3
+OBJCFLAGS=-O3
+##LFLAGS=
+
+DEPS=clock_device.o char_device.o block_device.o
+
+SRCDIR=src
+OBJDIR=obj
+vpath %.cpp $(SRCDIR)
+vpath %.h $(INCDIR)
+
+##all:
+
+
+%.o: %.cpp %.h
+	$(CC) $^ -o $(OBJDIR)/$@ $(OBJCFLAGS)
