Updated process logger. Added top.cpp and top.h along with a makfile target 'make top'. The top executable will not compile right now.

--- a/Project1/Makefile
+++ b/Project1/Makefile
@@ -48,6 +48,9 @@ run: all
 run_gdb: all
 	gdb --cd=$(BINDIR) --command=gdb_batch --return-child-result -exec=$(TARGET)
 	
+top: top.cpp top.h
+	$(CC) -Iinclude $(SRCDIR)/top.cpp -o $(BINDIR)/$@
+	
 valgrind: all
 	cd $(BINDIR) && valgrind --tool=memcheck --track-origins=yes --leak-check=full ./$(TARGET)
 	
