Changed pthread_kill to pthread_cancel so the kernel would properly shutdown. Added abnormal termination as an exception subtype. If a process doesn't explicity include the 'E' instruction it will raise this. Added some info to trace log output. Added some new programs.

--- a/Project1/5103-Process Scheduler.cbp
+++ b/Project1/5103-Process Scheduler.cbp
@@ -38,6 +38,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="bin/main.trace" />
+		<Unit filename="bin/proc1.trace" />
+		<Unit filename="bin/proc2.trace" />
+		<Unit filename="bin/proc3.trace" />
 		<Unit filename="include/cpu.h">
 			<Option target="Debug" />
 			<Option target="Release" />
