--- a/Project1/Makefile
+++ b/Project1/Makefile
@@ -56,6 +56,9 @@ run_lottery: all
 	
 run_gdb: all
 	gdb --cd=$(BINDIR) --command=gdb_batch --return-child-result -exec=$(TARGET)
+
+run_top: top
+	./$(BINDIR)/$^ $(BINDIR)
 	
 top: top.cpp top.h
 	$(CC) -Iinclude $(SRCDIR)/top.cpp -o $(BINDIR)/$@
