Added locking to process logger. Fixed some problems which valgrind brought up.

--- a/Project1/5103-Process Scheduler.cbp
+++ b/Project1/5103-Process Scheduler.cbp
@@ -168,6 +168,7 @@
 			<Option target="Debug" />
 			<Option target="Release" />
 		</Unit>
+		<Unit filename="src/utility/test_name_socket.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
