--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -4,6 +4,11 @@
 
 	total_frames = 100
 
+	#Maximum frames given to one process
+	max_proc_frames = 20
+
+	min_free_frames = 10
+
 [Timings]
 	instr_time = 1
 	cs_time = 5
@@ -12,10 +17,37 @@
 
 [MMU]
 	tlb_size = 64
-	
+
+	#Options: hex or decimal
+	addr_type = hex
+
+[Policy]
+	FA = fixed
+	PR = fifo
+
 [Processes]
 	0 = main.trace
 	1 = main.trace
-	
-[CPU]
-	exec_quanta = 3
+
+[Results]
+	file = ./test_results/stats.log
+	title = T1
+
+	##Global info
+	##Global context switch count
+	g_cs = 1
+
+	##Global page fault count
+	g_pf = 1
+
+	##Global average execution time
+	g_et = 1
+
+	##Local Per-process info
+	l_cs = 1
+	l_pf = 1
+	l_et = 1
+
+
+[R-R]
+	quanta = 3
