--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -33,6 +33,8 @@
 	file = ./test_results/stats.log
 	title = T1
 
+	trace = results.trace
+
 	##Global info
 	##Global context switch count
 	g_cs = 1
