More work to just about everything.

--- a/Project2/Makefile
+++ b/Project2/Makefile
@@ -13,7 +13,7 @@ OBJCFLAGS=-O3 -c -I$(INCDIR)
 LFLAGS=-L/usr/lib/
 
 DEPS= vmm_core.o iniReader.o mmu.o cpu.o round_robin.o frameAlloc.o pageReplace.o\
-	pr_fifo.o defaults.o id.o strConv.o io_control.o logger.o
+	pr_fifo.o defaults.o id.o strConv.o io_control.o logger.o cleaningDaemon.o
 ##Dependencies with obj directory appended
 _DEPS=$(patsubst %,$(OBJDIR)/%,$(DEPS))
 
@@ -43,8 +43,10 @@ run_%: $(TARGET)
 $(TARGET): $(TARGET).cpp $(TARGET).h $(DEPS)
 	$(CC) $(CFLAGS) $(LFLAGS) $(_DEPS) $(SRCDIR)/$@.cpp -o $(BINDIR)/$@
 	
-run_gdb:
+Debug:
 	make CFLAGS="-I$(INCDIR) -Wall -g -DDEBUG" OBJCFLAGS="-DDEBUG -g -c -I$(INCDIR)"
+
+run_gdb: Debug
 	gdb --cd=$(BINDIR) --command=gdb_batch --return-child-result -exec=$(TARGET)
 	
 filt: $(TARGET).cpp $(TARGET).h $(DEPS)
