--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -2,11 +2,12 @@
 	page_bits = 20
 	offset_bits = 12
 
-	total_frames = 3
+	total_frames = 30
 
 	#Maximum frames given to one process
+	#These are for use by the frame allocator
+	#Currently these aren't used
 	max_proc_frames = 20
-
 	min_free_frames = 10
 
 [Timings]
@@ -14,6 +15,8 @@
 	cs_time = 5
 	pf_time = 10
 	ioreq_time = 1
+
+	quanta = 3
 
 [MMU]
 	tlb_size = 64
@@ -25,9 +28,15 @@
 	FA = fixed
 	PR = fifo
 
+	#For use by the cleaning daemon
+	clean_min = 10
+	cleanup_amnt = 20
+
 [Processes]
 	0 = main.trace
 	1 = main.trace
+	2 = good_locality.trace
+	3 = main.trace
 
 [Results]
 	file = ./test_results/stats.log
