Fixed some problems with page replacement, tlb flushing/syncing and got the daemon working.

--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -37,6 +37,8 @@
 	1 = main.trace
 	2 = good_locality.trace
 	3 = main.trace
+	4 = good_locality.trace
+	5 = bad_locality.trace
 
 [Results]
 	file = ./test_results/stats.log
