Added frame tracing to the frame allocator. This is disabled by default but can be enabled through the ini file.

--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -32,6 +32,12 @@
 	clean_min = 10
 	cleanup_amnt = 20
 
+	##This is done in the frame allocator
+	##This will log the state of all frames whenver
+	##there is a change
+	print_frames = 1
+	frame_log = frames.trace
+
 [Processes]
 	0 = main.trace
 	1 = main.trace
