--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -6,7 +6,7 @@
 
 	#Maximum frames given to one process
 	#These are for use by the frame allocator
-	#Currently these aren't used
+	#Currently these aren't used'
 	max_proc_frames = 20
 	min_free_frames = 10
 
@@ -39,12 +39,12 @@
 	frame_log = frames.trace
 
 [Processes]
-	0 = main.trace
-	1 = main.trace
-	2 = good_locality.trace
-	3 = main.trace
-	4 = good_locality.trace
-	5 = bad_locality.trace
+	#0 = traces/main.trace
+	#1 = traces/main.trace
+	#2 = traces/good_locality.trace
+	#3 = traces/main.trace
+	#4 = traces/good_locality.trace
+	#5 = traces/bad_locality.trace
 
 [Results]
 	file = ./test_results/stats.log
