Fixed a problem in pr_fifo where a page that was being moved out of memory wouldn't be marked as non-present. It only happened if the page being moved was not dirty.

--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -37,6 +37,7 @@
 	##there is a change
 	print_frames = 1
 	frame_log = frames.trace
+	print_frames_on_pin = 1
 
 [Processes]
 	#0 = traces/main.trace
