Setup automation for creating/running tests.

--- a/Project2/bin/test_configs/T1/T1.ini
+++ b/Project2/bin/test_configs/T1/T1.ini
@@ -7,8 +7,11 @@
 	
 [Processes]
 	0 = traces/bad_locality.trace
-	1 = traces/good_locality.trace
+	1 = traces/bad_locality.trace
+	2 = traces/bad_locality.trace
 	
 [Results]
-	file = ./test_results/T1/stats.log
-	title = T1
+	file = ./test_results/T1/r1.log
+	title = T1_1
+	
+	trace = ./test_results/T1/results.trace
