--- a/Project2/bin/test_configs/T1/T1.ini
+++ b/Project2/bin/test_configs/T1/T1.ini
@@ -6,9 +6,10 @@
 	clean_min = 0
 	
 [Processes]
-	0 = traces/bad_locality.trace
-	1 = traces/bad_locality.trace
-	2 = traces/bad_locality.trace
+	0 = traces/large_dataset.trace
+	1 = traces/large_dataset.trace
+	2 = traces/large_dataset.trace
+	3 = traces/good_locality.trace
 	
 [Results]
 	file = ./test_results/T1/r1.log
