Changed the sorting in the python script again. Tweaked T1 to give more interesting results.

--- a/Project2/bin/test_results/T1/out_graphs.conf
+++ b/Project2/bin/test_results/T1/out_graphs.conf
@@ -24,4 +24,8 @@
 ## program requires that the x-axis is a setting as for most tests this
 ## will be the independent variable.
 
-sfci:gpf:frames_vs_faults:png
+sfci:gpf:frames_vs_faults
+
+sfci:get:frames_vs_exec
+
+sfci:gcs:frames_vs_cs
