LRU Approx is working I think, use option Policy:PR:lru_approx

--- a/Project2/Makefile
+++ b/Project2/Makefile
@@ -11,7 +11,8 @@ OBJCFLAGS=-O3 -c -I$(INCDIR)
 LFLAGS=-L/usr/lib/
 
 DEPS= vmm_core.o iniReader.o mmu.o cpu.o round_robin.o frameAlloc.o pageReplace.o\
-	pr_fifo.o defaults.o id.o strConv.o io_control.o logger.o cleaningDaemon.o
+	pr_fifo.o defaults.o id.o strConv.o io_control.o logger.o cleaningDaemon.o\
+	pr_lruApprox.o
 ##Dependencies with obj directory appended
 _DEPS=$(patsubst %,$(OBJDIR)/%,$(DEPS))
 
