Fixed the problem causing the segfault on the 5103 os. The problem was in the mmu constructor when it called flush on the tlb. The compiler/os for the class did not fill the memory with 0 so it tried to sync what it thought was a valid entry back to a non-existent page table. I added a memset before flush tlb and all is good. Flush tlb is not really necessary if we do a memset.

--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -37,6 +37,9 @@
 	##there is a change
 	print_frames = 1
 	frame_log = frames.trace
+
+	##This will tell the FA module to also print an update
+	##on pin and unpin events
 	print_frames_on_pin = 1
 
 [Processes]
