--- a/Project2/bin/test_results/out_graphs.conf
+++ b/Project2/bin/test_results/out_graphs.conf
@@ -1,8 +1,14 @@
+####### WARNING: This is an example config. Rename to out_graphs.conf and place with test results ####### 
 ##Format - xaxis(i|d):yaxis:output_file:optional_type
 ## Potential Values for y-axis
 ##	Page Faults - 'lpf' (local avg) 'lpfp' (local per-proc) gpf' (global)
 ##	Context Switches - 'lcs' or 'lcsp' or 'gcs'
+##	TLB Hits - 'ltlbh' or 'gtlbh'
+##	TLB Misses - 'ltlbm' or 'gtlbm'
 ##	Execution Time - 'let' or 'letp' or 'get'
+##	##ONLY GLOBAL##
+##	Page Outs - 'gpo'
+##	Page Ins - 'gpi'
 ##
 ##	The difference between lpf and lpfp is that when the graph is created,
 ##	lpf will produce 1 bar for each test wich is an average across all processes
