Added some more tests.

--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -41,6 +41,8 @@
 	##This will tell the FA module to also print an update
 	##on pin and unpin events
 	print_frames_on_pin = 1
+	
+	max_circular_faults = 10
 
 [Processes]
 	#0 = traces/main.trace
