Worked a lot on corner cases with little memory or potential circular faults.

--- a/Project2/bin/settings.ini
+++ b/Project2/bin/settings.ini
@@ -42,7 +42,7 @@
 	##on pin and unpin events
 	print_frames_on_pin = 1
 	
-	max_circular_faults = 10
+	ignore_circular_fault_warn = 0
 
 [Processes]
 	#0 = traces/main.trace
@@ -57,7 +57,3 @@
 	title = T1
 
 	trace = results.trace
-
-
-[R-R]
-	quanta = 3
