Documentation, experimenting with test params

--- a/Project2/bin/test_configs/T3/T3.ini
+++ b/Project2/bin/test_configs/T3/T3.ini
@@ -2,7 +2,7 @@
 	page_bits = 20
 	offset_bits = 12
 	
-	total_frames = 32
+	total_frames = 10
 
 [Timings]
 	quanta = 6
@@ -14,9 +14,15 @@
 	0 = traces/large_dataset.trace
 	1 = traces/large_dataset.trace
 	2 = traces/large_dataset.trace
+	3 = traces/large_dataset.trace
+	4 = traces/large_dataset.trace
+	5 = traces/large_dataset.trace
+	6 = traces/large_dataset.trace
+	7 = traces/large_dataset.trace
+	8 = traces/large_dataset.trace
 	
 [Results]
 	file = ./test_results/T3/r1.log
 	title = T3_1
 	
-	trace = ./test_results/T3/results.trace
+	trace = ./test_results/T3/r1.trace
