Added total time options to the graph script. The new local options are (ltime or ltimep). The new global option is gtime. gtime will find the largest time of any process which should be the time when all finished executing. I may add a cpu utilization option later.

--- a/Project2/bin/test_results/T1/out_graphs.conf
+++ b/Project2/bin/test_results/T1/out_graphs.conf
@@ -29,3 +29,9 @@ sfci:gpf:frames_vs_faults
 sfci:get:frames_vs_exec
 
 sfci:gcs:frames_vs_cs
+
+sfci:ltime:frames_vs_time
+
+sfci:ltimep:frames_vs_timep
+
+sfci:gtime:frames_vs_gtime
