Added a check in the VMM constructor that the page and offset bits = 32. Fixed up some of the tests which had bad paths.

--- a/Project2/bin/test_results/out_graphs(Example).conf
+++ b/Project2/bin/test_results/out_graphs(Example).conf
@@ -6,6 +6,7 @@
 ##	TLB Hits - 'ltlbh' or 'gtlbh'
 ##	TLB Misses - 'ltlbm' or 'gtlbm'
 ##	Execution Time - 'let' or 'letp' or 'get'
+##	Total Time (to complete all procs) - 'ltime' or 'ltimep' or 'gtime'
 ##	##ONLY GLOBAL##
 ##	Page Outs - 'gpo'
 ##	Page Ins - 'gpi'
