Fixed up test 1 and did some analysis. Files appended with .save will be ignored by the python script and won't be deleted/overwritten.

--- a/Project2/Makefile
+++ b/Project2/Makefile
@@ -75,3 +75,6 @@ run_%: $(TARGET)
 	
 run_all: $(TARGET)
 	./scripts/run_all.py $(BINDIR) ./test_configs ./test_results
+	
+graph_%:
+	python ./scripts/makeGraphs.py $(BINDIR)/test_results/$*
