Adding report file and graphs and description for T3

--- a/Project2/bin/test_configs/T3/T3.ini
+++ b/Project2/bin/test_configs/T3/T3.ini
@@ -2,24 +2,18 @@
 	page_bits = 20
 	offset_bits = 12
 	
-	total_frames = 10
+	total_frames = 15
 
 [Timings]
-	quanta = 6
+	quanta = 3
 
 [Policy]
 	clean_min = 0
 	
 [Processes]
-	0 = traces/large_dataset.trace
-	1 = traces/large_dataset.trace
-	2 = traces/large_dataset.trace
-	3 = traces/large_dataset.trace
-	4 = traces/large_dataset.trace
-	5 = traces/large_dataset.trace
-	6 = traces/large_dataset.trace
-	7 = traces/large_dataset.trace
-	8 = traces/large_dataset.trace
+	0 = traces/large_dataset_badfifo.trace
+	1 = traces/large_dataset_badfifo.trace
+	2 = traces/large_dataset_badfifo.trace
 	
 [Results]
 	file = ./test_results/T3/r1.log
