Quick update to report

--- a/Project2/bin/test_results/out_graphs(Example).conf
+++ b/Project2/bin/test_results/out_graphs(Example).conf
@@ -5,7 +5,7 @@
 ##	Context Switches - 'lcs' or 'lcsp' or 'gcs'
 ##	TLB Hits - 'ltlbh' or 'gtlbh'
 ##	TLB Misses - 'ltlbm' or 'gtlbm'
-##	Execution Time - 'let' or 'letp' or 'get'
+##	Execution Time - 'let' or 'letp' or 'get' (Not very useful)
 ##	Total Time (to complete all procs) - 'ltime' or 'ltimep' or 'gtime'
 ##	##ONLY GLOBAL##
 ##	Page Outs - 'gpo'
