More work on report file. Updated python scripts.

--- a/Project2/bin/test_results/BadLRU/out_graphs.conf
+++ b/Project2/bin/test_results/BadLRU/out_graphs.conf
@@ -5,11 +5,11 @@
 ##	Context Switches - 'lcs' or 'lcsp' or 'gcs'
 ##	TLB Hits - 'ltlbh' or 'gtlbh'
 ##	TLB Misses - 'ltlbm' or 'gtlbm'
-##	Execution Time - 'let' or 'letp' or 'get' (Not very useful)
+##	Execution Time - 'let' or 'letp' or 'get' (Don't use this one. Not very useful)
 ##	Total Time (to complete all procs) - 'ltime' or 'ltimep' or 'gtime'
 ##	##ONLY GLOBAL##
-##	Page Outs - 'gpgo'
-##	Page Ins - 'gpgi'
+##	Page Outs - 'gpo'
+##	Page Ins - 'gpi'
 ##
 ##	The difference between lpf and lpfp is that when the graph is created,
 ##	lpf will produce 1 bar for each test wich is an average across all processes
@@ -31,13 +31,22 @@
 ## program requires that the x-axis is a setting as for most tests this
 ## will be the independent variable.
 
-##Global Page Size vs. Avg Context-Switches
-spsi:lcs:ps_vs_cs:png
+sprt:gpo:prm_vs_gpo
 
-##Global Page Size vs. Per-Process Context-Switches
-spsi:lcsp:ps_vs_csp
+sprt:gpi:prm_vs_gpi
 
-##Global Frame Count vs. Global Page Fault
-sfci:gpf:fc_vs_gpf:png
+sprt:gtime:prm_vs_gtime
 
-sprt:letp:prm_vs_pfp
+sprt:ltime:prm_vs_ltime
+
+sprt:lcs:prm_vs_lcs
+
+sprt:gcs:prm_vs_gcs
+
+sprt:gutil:prm_vs_util
+
+sprt:gpf:prm_vs_gpf
+
+sprt:gtlbh:prm_vs_tlbh
+
+sprt:gtlbm:prm_vs_tlbm
