--- a/Project2/bin/test_results/T1/out_graphs.conf
+++ b/Project2/bin/test_results/T1/out_graphs.conf
@@ -9,3 +9,7 @@ sfci:ltimep:frames_vs_timep
 sfci:gtime:frames_vs_gtime
 
 sfci:gutil:frames_vs_util
+
+sfci:gpgo:frames_vs_pageout
+
+sfci:gpgi:frames_vs_pagein
