Updated badlru test

--- a/Project2/bin/test_configs/BadLRU/BadLRU.ini
+++ b/Project2/bin/test_configs/BadLRU/BadLRU.ini
@@ -2,18 +2,19 @@
 	page_bits = 20
 	offset_bits = 12
 	
-	total_frames = 15
+	total_frames = 8
 	
 [Timings]
-	quanta = 3
+	quanta = 5
 
 [Policy]
 	clean_min = 0
 	
 [Processes]
-	0 = traces/randset_badlru.trace
-	1 = traces/randset_badlru.trace
-	2 = traces/randset_badlru.trace
+	0 = traces/badlru.trace
+	1 = traces/large_dataset.trace
+	2 = traces/badlru.trace
+	3 = traces/large_dataset.trace
 	
 [Results]
 	file = ./test_results/BadLRU/r1.log
