Fixed badlru2 test.

--- a/Project2/bin/test_configs/BadLRU2/BadLRU2.ini
+++ b/Project2/bin/test_configs/BadLRU2/BadLRU2.ini
@@ -17,7 +17,7 @@
 	3 = traces/large_dataset.trace
 	
 [Results]
-	file = ./test_results/BadLRU/r1.log
+	file = ./test_results/BadLRU2/r1.log
 	title = BadLRU
 	
-	trace = ./test_results/BadLRU/r1.trace
+	trace = ./test_results/BadLRU2/r1.trace
