--- a/Project2/bin/test_configs/BadLRU2/BadLRU2.ini
+++ b/Project2/bin/test_configs/BadLRU2/BadLRU2.ini
@@ -2,7 +2,7 @@
 	page_bits = 20
 	offset_bits = 12
 	
-	total_frames = 8
+	total_frames = 2
 	
 [Timings]
 	quanta = 5
@@ -11,13 +11,10 @@
 	clean_min = 0
 	
 [Processes]
-	0 = traces/badlru.trace
-	1 = traces/large_dataset.trace
-	2 = traces/badlru.trace
-	3 = traces/large_dataset.trace
+	0 = traces/test.trace
 	
 [Results]
 	file = ./test_results/BadLRU2/r1.log
-	title = BadLRU
+	title = BadLRU2
 	
 	trace = ./test_results/BadLRU2/r1.trace
