Fixed up more formatting. Added some code.

--- a/Project3/src/makefile
+++ b/Project3/src/makefile
@@ -3,7 +3,7 @@ AFLAGS = -g -I.
 
 BINS = Kernel.o BitBlock.o IndexNode.o Block.o DirectoryEntry.o  ProcessContext.o FileDescriptor.o  Stat.o FileSystem.o SuperBlock.o RandomAccessFile.o io_types.o
 
-APPS = mkfs cat tee cp ls ln mkdir dump
+APPS = mkfs cat tee cp ls ln rm mkdir dump
 
 all:
 	make $(BINS)
@@ -31,6 +31,9 @@ ls: ls.cc $(BINS)
 	
 ln: ln.cc $(BINS)
 	g++ $(AFLAGS) ln.cc $(BINS) -o ln
+	
+rm: rm.cc $(BINS)
+	g++ $(AFLAGS) rm.cc $(BINS) -o rm
 
 tee: tee.cc $(BINS)
 	g++ $(AFLAGS) tee.cc $(BINS) -o tee
