Tweaked run_tests some more which will likely continue for awhile as I find things to add/change. I added makefile targets test_% and test_all. The % in test_% can be replaced by the name of the directory that contains the desired tests.It automatically assumes it is in the tests directory so no need to prepend it.

--- a/Project3/src/makefile
+++ b/Project3/src/makefile
@@ -90,7 +90,9 @@ FileSystem.o: FileSystem.h FileSystem.cc
 SuperBlock.o: SuperBlock.h SuperBlock.cc
 	g++ $(FLAGS) SuperBlock.cc
 
+test_all: $(APPS)
+	make test_link_tests
+	make test_should_error
 
-
-
-
+test_%: $(APPS)
+	./tests/run_tests.py ./ ./tests/$*
